Fixes topbar menu button color on mobile safari

--- a/common/src/styles/_topbar.scss
+++ b/common/src/styles/_topbar.scss
@@ -232,6 +232,7 @@
         background: none;
         border: none;
         outline: none;
+        color: inherit;
 
         font-size: 24px;
         padding: 0.25em;
